--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Omega notes</string>
+    <string name="todo_menu_title">Todo</string>
+    <string name="notes_menu_title">Notes</string>
+    <string name="event_menu_title">Évènements</string>
 </resources>
